# Redes-Proyecto1

./: .gitignore  README.md
modpack/: main.py  pyproject.toml  requirements.txt
modpack/client/: client.py
modpack/data/processed/: manifest.json
modpack/server/: modpack_server.py  remote_server.py
modpack/server/data/processed/: manifest.json
